--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap" 
         rel="stylesheet">
         <link rel="stylesheet" 
-        href="https://cdnjs.com/libraries/modern-normalize">
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
         <link rel="stylesheet" href="./css/styles.css">  
     </head>
     <body>
         <!-- =========== HEADER ========== -->
         <header class="page-header">
-            <nav class="page-nav"> 
+        <div class="container header-container">
+            <nav class="page-nav nav-container"> 
                 <a class="page-logo" href="./index.html">
                     Web<span class="header-studio">Studio</span>
                 </a>
-                <ul class="menu">
+                <ul class="menu menu-list">
                     <li class="menu-item">
                         <a class="menu-link" href="./index.html">Studio</a>
                     </li>
@@ -33,24 +34,28 @@
                 </ul>
             </nav>
             <address class="contact-block">
-            <ul class="contact-list">
+            <ul class="contact-list address-container">
                 <li class="contact-list-item">
                     <a class="contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="contact-list-item">
                     <a class="contact-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
             </address>
+        </div>
         </header>
         <main>
         <!-- =========== HERO ========== -->        
         <section class="hero-section">
+        <div class="container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button class="hero-button" type="button">Order Service</button>
+        </div>
         </section>
         <!-- =========== BENEFITS ========== -->
-        <section class="benefits-section">
-            <h2>Our Benefits</h2>
-            <ul class="benefits-list">
+        <section class="benefits-section section">
+        <div class="container">
+            <h2 class="visually-hidden">Our Benefits</h2>
+            <ul class="benefits-list benefits-container">
                 <li class="benefits-list-item">
                     <h3 class="benefits-list-title">Strategy</h3>
                     <p class="benefits-list-text">
@@ -76,86 +81,113 @@
                     </p>
                 </li>
             </ul>
+        </div>
         </section>
         <!-- =========== TEAM ========== -->
-        <section class="team-section">
+        <section class="team-section section">
+        <div class="container">
             <h2 class="section-title">Our Team</h2>
-            <ul class="team-list">
+            <ul class="team-list ">
                 <li class="team-list-item">
                     <img class="team-list-img" src="./images/team/mark-guerrero.jpg" 
                     alt="Mark Guerrero photo" width="264" height="260">
+                    <div class="team-card-text">
                     <h3 class="team-member-name">Mark Guerrero</h3>
                     <p class="team-member-text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-list-item">
                     <img class="team-list-img" src="./images/team/tom-ford.jpg" 
                     alt="Tom Ford photo" width="264" height="260">
+                    <div class="team-card-text">
                     <h3 class="team-member-name">Tom Ford</h3>
                     <p class="team-member-text">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-list-item">
                     <img class="team-list-img" src="./images/team/camila-garcia.jpg" 
                     alt="Camila Garcia photo" width="264" height="260">
+                    <div class="team-card-text">
                     <h3 class="team-member-name">Camila Garcia</h3>
                     <p class="team-member-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-list-item">
                     <img class="team-list-img" src="./images/team/daniel-wilson.jpg" 
                     alt="Daniel Wilson photo" width="264" height="260">
+                    <div class="team-card-text">
                     <h3 class="team-member-name">Daniel Wilson</h3>
                     <p class="team-member-text">UI Designer</p>
-            </li>
+                    </div>
+                </li>
             </ul>
+        </div>
         </section>
          <!-- =========== PORTFOLIO ========== -->
-         <section class="portfo-section">
+         <section class="portfo-section section">
+        <div class="container">
             <h2 class="section-title">Our Portfolio</h2>
             <ul class="portfo-list">
                 <li class="portfo-list-item">
                     <img class="portfo-list-img" src="./images/portfolio/banking-app.jpg" 
                     alt="Banking App image" width="360" height="300">
+                        <div class="portfo-card-text">
                         <h3 class="portfo-list-title">Banking App</h3>
-                            <p class="portfo-list-text">App</p>
+                        <p class="portfo-list-text">App</p>
+                        </div>
                 </li>
                 <li class="portfo-list-item">
                     <img class="portfo-list-img" src="./images/portfolio/cashless-payment.jpg" 
                     alt="Cashless Payment image" width="360" height="300">
+                        <div class="portfo-card-text">
                         <h3 class="portfo-list-title">Cashless Payment</h3>
-                            <p class="portfo-list-text">Marketing</p>
+                        <p class="portfo-list-text">Marketing</p>
+                        </div>
                 </li>
                 <li class="portfo-list-item">
                     <img class="portfo-list-img" src="./images/portfolio/maditation-app.jpg" 
                     alt="Meditation App image" width="360" height="300">
+                        <div class="portfo-card-text">
                         <h3 class="portfo-list-title">Meditation App</h3>
-                            <p class="portfo-list-text">App</p>
+                        <p class="portfo-list-text">App</p>
+                        </div>
                 </li>
                 <li class="portfo-list-item">
                     <img class="portfo-list-img" src="./images/portfolio/taxi-service.jpg" 
                     alt="Taxi Service image" width="360" height="300"> 
+                        <div class="portfo-card-text">
                         <h3 class="portfo-list-title">Taxi Service</h3>        
-                            <p class="portfo-list-text">Marketing</p>
+                        <p class="portfo-list-text">Marketing</p>
+                        </div>
                 </li>
                 <li>
                     <img class="portfo-list-img" src="./images/portfolio/screen-illustrations.jpg" 
                     alt="Screen Illustration image" width="360" height="300">
+                        <div class="portfo-card-text">
                         <h3 class="portfo-list-title">Screen Illustrations</h3>
-                            <p class="portfo-list-text">Design</p>
+                        <p class="portfo-list-text">Design</p>
+                        </div>
                 </li>
                 <li>
                     <img class="portfo-list-img" src="./images/portfolio/online-cources.jpg" 
                     alt="Online Cources image" width="360" height="300">
+                        <div class="portfo-card-text">
                         <h3 class="portfo-list-title">Online Courses</h3>
-                            <p class="portfo-list-text">Marketing</p>
+                        <p class="portfo-list-text">Marketing</p>
+                        </div>
                 </li>
             </ul>
+        </div>
         </section>
         </main>
         <!-- =========== FOOTER ========== -->
         <footer class="page-footer">
+        <div class="container footer-container">
             <a class="page-logo" href="./index.html">
                 Web<span class="footer-studio">Studio</span>
             </a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
         </footer>
     </body>
     </html>
