--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="page-header">
         <div class="container header-container">
             <nav class="page-nav nav-container"> 
-                <a class="page-logo" href="./index.html">
+                <a class="page-logo header-logo" href="./index.html">
                     Web<span class="header-studio">Studio</span>
                 </a>
                 <ul class="menu menu-list">
@@ -160,7 +160,7 @@
                         <p class="portfo-list-text">Marketing</p>
                         </div>
                 </li>
-                <li>
+                <li class="portfo-list-item">
                     <img class="portfo-list-img" src="./images/portfolio/screen-illustrations.jpg" 
                     alt="Screen Illustration image" width="360" height="300">
                         <div class="portfo-card-text">
@@ -168,7 +168,7 @@
                         <p class="portfo-list-text">Design</p>
                         </div>
                 </li>
-                <li>
+                <li class="portfo-list-item">
                     <img class="portfo-list-img" src="./images/portfolio/online-cources.jpg" 
                     alt="Online Cources image" width="360" height="300">
                         <div class="portfo-card-text">
@@ -182,8 +182,8 @@
         </main>
         <!-- =========== FOOTER ========== -->
         <footer class="page-footer">
-        <div class="container footer-container">
-            <a class="page-logo" href="./index.html">
+        <div class="container">
+            <a class="page-logo footer-logo" href="./index.html">
                 Web<span class="footer-studio">Studio</span>
             </a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
